--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
+  flutter_login: ^5.0.0
 
 dev_dependencies:
   flutter_test:
