--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: dict_cat_archives
 description: "A new Flutter project."
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
   flutter_login: ^5.0.0
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.4
+  firebase_ui_auth:
 
 dev_dependencies:
   flutter_test:
