--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,24 @@ dependencies:
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.4
   firebase_ui_auth:
+  flutter_launcher_icons: ^0.13.1
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/images/DICT-logo.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/DICT-logo.png"
+  web:
+    generate: true
+    image_path: "assets/images/DICT-logo.png"
+    background_color: "#ffffff"
+    theme_color: "#ffffff"
 
 flutter:
   uses-material-design: true
