--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "dict_cat_archives",
-    "short_name": "dict_cat_archives",
+    "name": "DICT Catanduanes Archives",
+    "short_name": "DICT Catanduanes Archives",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#ffffff",
+    "theme_color": "#ffffff",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
