--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,12 @@ dependencies:
   flutter_login: ^5.0.0
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.4
+  firebase_storage:
   firebase_ui_auth:
   flutter_launcher_icons: ^0.13.1
   change_app_package_name: ^1.1.0
+  image_gallery_saver: ^2.0.3
+  image_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
