--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   firebase_ui_auth:
   flutter_launcher_icons: ^0.13.1
   change_app_package_name: ^1.1.0
-  image_gallery_saver: ^2.0.3
-  image_picker: ^1.0.1
+  provider:
+  page_transition:
 
 dev_dependencies:
   flutter_test:
