--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
+  firebase_core_web:
   flutter_login: ^5.0.0
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.4
@@ -22,6 +23,8 @@ dependencies:
   change_app_package_name: ^1.1.0
   provider:
   page_transition:
+  image_picker:
+  image_picker_for_web: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Sans
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
