--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   image_picker:
   dotted_border:
   fl_chart:
+  excel: ^4.0.2
+  universal_html:
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
