--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   fl_chart:
   excel: ^4.0.2
   universal_html:
-  animated_splash_screen: ^1.3.0
+  flutter_native_splash:
+  particles_flutter:
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +46,11 @@ flutter_launcher_icons:
     image_path: "assets/images/DICT-logo.png"
     background_color: "#ffffff"
     theme_color: "#ffffff"
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/DICT-logo.png
+  web: true
 
 flutter:
   uses-material-design: true
@@ -71,6 +77,9 @@ flutter:
     - family: Sans
       fonts:
         - asset: assets/fonts/OpenSans-Regular.ttf
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
